clean simple branch

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>01-basics/01-hello-world</title>
+        <title>01-basics/01-hello-world in Tauri!</title>
 
-        <link rel="stylesheet" href="/src/app.css" />
         <script type="module" src="/src/main.js"></script>
     </head>
 
